--- a/bootstrap-test/grid-02.html
+++ b/bootstrap-test/grid-02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bs-02</title>
+    <title>grid-02</title>
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />-->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
