--- a/bootstrap-test/button-01.html
+++ b/bootstrap-test/button-01.html
@@ -11,13 +11,26 @@
     <script src="./bootstrap/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <div class="container-fluid border py-5 bg-success">
-      <h1>제목</h1>
-      <p>김 수한무 거북이와 두루미</p>
+    <div class="container px-2 py-2">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-secondary">Secondary</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+      <button type="button" class="btn btn-warning">Warning</button>
+      <button type="button" class="btn btn-info">Info</button>
+      <button type="button" class="btn btn-dark">Dark</button>
+      <button type="button" class="btn btn-light">Light</button>
+      <hr />
+      <button type="button" class="btn btn-outline-primary">Primary</button>
+      <button type="button" class="btn btn-outline-dark">Dark</button>
+      <hr />
+      <button type="button" class="btn btn-primary btn-lg">Large button</button>
+      <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+      <hr />
+      <button type="button" class="btn btn-primary btn-sm">Small button</button>
+      <button type="button" class="btn btn-secondary btn-sm">Small button</button>
+      <hr />
+      <button type="button" class="btn btn-primary" disabled><span class="spinner-border spinner-border-sm"></span> 로딩중</button>
     </div>
-    <div class="container-sm border my-1 py-2 bg-info">576px 크기까지는 100% 유지</div>
-    <div class="container-md border my-1 py-2 bg-secondary text-white">768px 크기까지는 100% 유지</div>
-    <div class="container-lg border my-1 py-2">992px 크기까지는 100% 유지</div>
-    <div class="container-xl border my-1 py-2">1200px 크기까지는 100% 유지</div>
   </body>
 </html>
