--- a/bootstrap-test/list-group-04.html
+++ b/bootstrap-test/list-group-04.html
@@ -9,7 +9,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" /> -->
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="./bootstrap/icons/bootstrap-icons.css" />
   </head>
   <body>
