--- a/bootstrap-test/table-01.html
+++ b/bootstrap-test/table-01.html
@@ -8,7 +8,7 @@
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />-->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="./bootstrap/js/bootstrap.min.js"></script>
+    <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <table class="table table-info">
