--- a/bootstrap-test/button-group-03.html
+++ b/bootstrap-test/button-group-03.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>button-group-02.html</title>
+    <title>button-group-03.html</title>
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />-->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,14 +14,10 @@
   <body>
     <div class="container px-2 py-2">
       <div class="py-2">
-        <div class="btn-group">
+        <div class="btn-group-vertical">
           <a href="#" class="btn btn-outline-primary">Home</a>
+          <a href="#" class="btn btn-outline-primary">About</a>
           <a href="#" class="btn btn-outline-primary">Recruit</a>
-          <button class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown">About</button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">CEO</a>
-            <a class="dropdown-item" href="#">Business</a>
-          </div>
         </div>
       </div>
     </div>
