--- a/bootstrap-test/youtube-01.html
+++ b/bootstrap-test/youtube-01.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>button-group-02.html</title>
+    <title>youtube-01.html</title>
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />-->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./bootstrap/icons/bootstrap-icons.css" />
     <script src="./bootstrap/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <div class="container px-2 py-2">
-      <div class="py-2">
-        <div class="btn-group">
-          <a href="#" class="btn btn-outline-primary">Home</a>
-          <a href="#" class="btn btn-outline-primary">Recruit</a>
-          <button class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown">About</button>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">CEO</a>
-            <a class="dropdown-item" href="#">Business</a>
+      <div class="py-2 row">
+        <div class="py-2">
+          <div class="ratio ratio-21x9">
+            <iframe src="//www.youtube.com/embed/AA_5sLaTErQ" title="YouTube video" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="py-2">
+          <div class="ratio ratio-16x9">
+            <iframe src="//www.youtube.com/embed/MUFasKZcH_c" title="YouTube video" allowfullscreen></iframe>
           </div>
         </div>
       </div>
