--- a/bootstrap-test/form-02.html
+++ b/bootstrap-test/form-02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>form-01</title>
+    <title>form-02</title>
     <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />-->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -27,7 +27,7 @@
         </div>
         <div class="row mb-3 justify-content-center">
           <div class="col-sm-6 offset-sm-2">
-            <div class="form-check">
+            <div class="form-check form-switch">
               <input class="form-check-input" type="checkbox" id="autoLogin" />
               <label class="form-check-label" for="autoLogin">자동 로그인</label>
             </div>
